force-app/main/default/objects/Account/fields/field7__c.field-meta.xml
<CustomField>
    <fullName>field7__c</fullName>
    <label>field7</label>
    <length>11</length>
    <type>Text</type>
</CustomField>