force-app/main/default/objects/Account/fields/Novtest1__c.field-meta.xml
<CustomField>
    <fullName>Novtest1__c</fullName>
    <label>Novtest1</label>
    <length>11</length>
    <type>Text</type>
</CustomField>