force-app/main/default/objects/Account/fields/OctField1__c.field-meta.xml
<CustomField>
    <fullName>OctField1__c</fullName>
    <label>OctField1</label>
    <length>11</length>
    <type>Text</type>
</CustomField>