force-app/main/default/objects/Account/fields/OctField2__c.field-meta.xml
<CustomField>
    <fullName>OctField2__c</fullName>
    <label>OctField2</label>
    <length>12</length>
    <type>Text</type>
</CustomField>