force-app/main/default/objects/Account/fields/PRTest3__c.field-meta.xml
<CustomField>
    <fullName>PRTest3__c</fullName>
    <label>PRTest3</label>
    <length>11</length>
    <type>Text</type>
</CustomField>