force-app/main/default/objects/Account/fields/PRTest4__c.field-meta.xml
<CustomField>
    <fullName>PRTest4__c</fullName>
    <label>PRTest4</label>
    <length>11</length>
    <type>Text</type>
</CustomField>