force-app/main/default/objects/Account/fields/SimpleField__c.field-meta.xml
<CustomField>
    <fullName>SimpleField__c</fullName>
    <label>SimpleField</label>
    <length>12</length>
    <type>Text</type>
</CustomField>