force-app/main/default/objects/Account/fields/TTest__c.field-meta.xml
<CustomField>
    <fullName>TTest__c</fullName>
    <label>TTest</label>
    <length>12</length>
    <type>Text</type>
</CustomField>